--- a/notebooks/07_load_daily_city_metrics/07_load_daily_city_metrics.ipynb
+++ b/notebooks/07_load_daily_city_metrics/07_load_daily_city_metrics.ipynb
@@ -5,12 +5,12 @@
    "name": "streamlit"
   },
   "lastEditStatus": {
-   "notebookId": "kss7vquztn5742emuo3m",
-   "authorId": "350843732387",
-   "authorName": "JOHN",
-   "authorEmail": "jeremiah.hansen@snowflake.com",
-   "sessionId": "d322f813-fe43-46ce-a12e-8f6586bfa9bf",
-   "lastEditTime": 1744841249680
+   "notebookId": "77a5gciawjbvncsv3vgd",
+   "authorId": "1398286068057",
+   "authorName": "RASHMIVAGHA",
+   "authorEmail": "rashmivagha@gmail.com",
+   "sessionId": "4778b60d-ca24-4e1f-a390-38de69df5876",
+   "lastEditTime": 1762804253031
   }
  },
  "nbformat_minor": 5,
@@ -108,7 +108,7 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": "SELECT * FROM DAILY_CITY_METRICS LIMIT 10;",
+   "source": "--SELECT * FROM DAILY_CITY_METRICS LIMIT 10;",
    "execution_count": null
   }
  ]
